--- a/app/src/main/res/layout/fragment_savings.xml
+++ b/app/src/main/res/layout/fragment_savings.xml
@@ -57,6 +57,41 @@
                 android:textColor="#333333"
                 android:textSize="18dp" />
 
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ic_appbar"
+                android:layout_alignParentTop="true"
+                android:paddingLeft="16dp"
+                android:paddingTop="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/ic_appbar_hub_normal"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Medium Text"
+                android:id="@+id/premierVal"
+                android:layout_above="@+id/signin_Tv"
+                android:layout_toRightOf="@+id/ic_appbar"
+                android:layout_toEndOf="@+id/ic_appbar"
+                android:layout_marginLeft="62dp"
+                android:layout_marginStart="62dp"
+                android:layout_marginBottom="96dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Medium Text"
+                android:id="@+id/premierVal2"
+                android:layout_marginTop="83dp"
+                android:layout_below="@+id/savings_cont1"
+                android:layout_alignLeft="@+id/premierVal"
+                android:layout_alignStart="@+id/premierVal" />
+
 
         </RelativeLayout>
     </ScrollView>
