--- a/app/src/main/res/layout/fragment_loans.xml
+++ b/app/src/main/res/layout/fragment_loans.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/Loans_welcome1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/appbar_bg_savings"
+                android:background="@drawable/appbar_bg_loans"
                 android:paddingLeft="72dp"
                 android:paddingRight="109dp"
                 android:paddingTop="40dp"
@@ -32,14 +32,16 @@
                 android:id="@+id/savings_cont1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Loans_welcome1"
                 android:background="@drawable/account_container"
                 android:paddingBottom="17dp"
                 android:paddingLeft="98dp"
                 android:paddingTop="55dp"
-                android:text="Premier Savings"
+                android:text="Personal Loans"
                 android:textColor="#333333"
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                android:layout_below="@+id/Loans_welcome1"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
 
@@ -53,7 +55,7 @@
                 android:paddingLeft="98dp"
 
                 android:paddingTop="55dp"
-                android:text="Personal Savings"
+                android:text="car Loans"
                 android:textColor="#333333"
                 android:textSize="18dp" />
 
