replaced ksoap2 with ksoap3.0 jar file and modified accordingly

--- a/app/src/main/res/layout/activity_savingshub_screen.xml
+++ b/app/src/main/res/layout/activity_savingshub_screen.xml
@@ -1,6 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-</LinearLayout>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#ffffff"
+    android:shrinkColumns="*"
+    android:stretchColumns="*">
+
+
+    <!-- Row 1 with single column -->
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_span="3"
+        android:background="#b0b0b0"
+        android:padding="18dip"
+        android:text="Row 1"
+        android:textColor="#000"
+        android:textSize="18dp" />
+
+    </TableRow>
+</TableLayout>
