--- a/app/src/main/res/layout/fragment_savings.xml
+++ b/app/src/main/res/layout/fragment_savings.xml
@@ -27,6 +27,7 @@
                 android:textColor="#deffffff"
                 android:textSize="20dp" />
 
+
             <TextView
 
                 android:id="@+id/savings_cont1"
@@ -91,6 +92,13 @@
                 android:layout_below="@+id/savings_cont1"
                 android:layout_alignLeft="@+id/premierVal"
                 android:layout_alignStart="@+id/premierVal" />
+
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/personal_savings"
+                android:layout_below="@+id/Savings_welcome"
+                android:layout_centerHorizontal="true" />
 
 
         </RelativeLayout>
